# banking

./: .envrc  Cargo.toml  LICENSE  Readme.md  flake.nix  startdb.fish
.direnv/: flake-profile-1-link
migrations/: 20251006044505_users.up.sql
src/: api.rs  main.rs  utils.rs
