[package]
name = "stasher"
version = "0.1.0"
edition = "2024"

[dependencies]
## Imported from my other http libs
aide = { version = "0.15.0", features = ["axum", "axum-extra", "axum-json", "axum-query", "axum-multipart", "axum-form", "macros", "redoc", "axum-extra-query", "axum-extra-headers", "axum-extra-cookie", "axum-extra-typed-routing", "axum-tokio", "axum-matched-path", "serde_qs"] }
anyhow = { version = "1.0.98", features = ["backtrace"] }
axum = { version = "0.8.4", features = ["tracing", "multipart", "json", "ws", "macros"] }
axum-extra = { version = "0.10.1", features = ["cookie", "multipart", "query"] }
base64 = "0.22.1"
chrono = "0.4.41"
clap = { version = "4.5.41", features = ["derive", "env"] }
futures = "0.3.31"
include_dir = "0.7.4"
indoc = "2.0.6"
mime_guess = "2.0.5"
mockall = "0.13.1"
paste = "1.0.15"
rand = "0.9.2"
regex = "1.11.1"
reqwest = { version = "0.12.22", default-features = false, features = ["rustls-tls", "json"] }
schemars = { version = "1.0.4", features = ["chrono04"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "uuid"] }
sqlx-core = "0.8.6"
tokio = { version = "1.47.0", features = ["full"] }
tokio-postgres = { version = "0.7.13", features = ["with-serde_json-1"] }
tower = { version = "0.5.2", features = ["util", "limit"] }
tower-http = { version = "0.6.6", features = ["cors", "fs", "set-header", "normalize-path", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
urlencoding = "2.1.3"
uuid = { version = "1.17.0", features = ["serde", "v4"] }
